testsuite/tests/indexed-types/should_fail/T9097.stderr

T9097.hs:10:3: error: [GHC-73138]
    • Illegal type synonym family application ‘Any’ in instance:
        Foo Any
    • In the equations for closed type family ‘Foo’
      In the type family declaration for ‘Foo’
